# Single_Cycle_CPU

./: CMakeLists.txt  FIleLoading.h  alu.cpp  alu.h  control.cpp  control.h  data_mem.cpp  data_mem.h  instr_mem.cpp  instr_mem.h  instr_memory.cpp  instr_memory.h  main.cpp  mux.cpp  mux.h  pc.cpp  pc.h  reg.cpp  reg.h  register.cpp  register.h  signExtend.cpp  signExtend.h
fibonacci/: fibonacci.s  fibonacci.text
legv8/samples/: sumtwo.data  sumtwo.text
output/: dataDump.DTDUMP  dataMemContent.text  datapath.txt
resources/: alu_test.s  alu_test.text  cb_test.s  cb_test.text  imm_test.text  ldur_test.data  ldur_test.text  stur_test.s  stur_test.text
simulator/: fibonacci.s
testing_cpu/: CMakeLists.txt  alu.cpp  control.cpp  control.h  data_dump.txt  data_mem.cpp  data_mem.h  datapath.txt  instr_mem.cpp  instr_mem.h  main.cpp  mux.h  pc.cpp  pc.h  reg.cpp  reg.h  signExtend.cpp  signExtend.h  sumtwo.text
